# Personal-Website

./: .env.example  .gitignore  PROCFILE  Procfile  README.md  app.py  docker-compose.yml  requirements.txt
flaskr/: .dockerignore  README.md  app.py  config.py  dockerfile.flaskr  requirements.txt
flaskr/dynamic/py/: getmymarks.py
flaskr/scripts/: getmymarks.py  sat.py
flaskr/static/css/: SATsolver.css  USYDmarks.css
flaskr/templates/: SATsolver.html  USYDmarks.html  base.html  index.html  landing.html
frontend_react/: package.json  tailwind.config.js
frontend_react/infra/: common_routes.conf  dockerfile.reactf  entrypoint.sh  nginx_http.conf  nginx_https.conf
frontend_react/src/: App.jsx  index.jsx
frontend_react/src/Components/: NavBar.jsx
frontend_react/src/Pages/: AsyncDemo.jsx  Landing.jsx  RustPlayground.jsx  SATsolver.jsx
frontend_react/src/api/: AsyncApi.js  RustApi.js  SATSolverApi.js  SSEApi.js  (+1 more)
py/: sat.py
reactf/: .dockerignore  README.md  client.conf  dockerfile.reactf  index.html  package.json  vite.config.js
reactf/infra/: common_routes.conf  dockerfile.reactf
reactf/public/: index.html
reactf/src/: App.js  App.jsx  index.js
server_fastapi/: README.md  app.py  dockerfile.flaskr  requirements.txt
server_fastapi/scripts/: sat.py
server_rust/: Cargo.toml  Dockerfile  Dockerfile.runner  seccomp-profile.json
server_rust/src/: main.rs  runner.rs
static/css/: SATsolver.css
static/js/: SATsolver.js  USYDmarks.js
static/py/: getmymarks.py
templates/: SATsolver.html  USYDmarks.html  base.html  index.html  landing.html
(+55 files in other folders)
